# agents

./: .gitignore  AGENTS.md  pyproject.toml
2_openai/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
5_autogen/: creator.py
ez_bshrk/coder/: README.md  check_env.py  pyproject.toml
ez_bshrk/debate/: README.md
ez_bshrk/deep_research_lab/: README.md  intake_agent.py
ez_bshrk/digital_twin/: 4_lab4.ipynb
ez_bshrk/engineering_team/: pyproject.toml
ez_bshrk/financial_researcher/: README.md
ez_bshrk/first_principles_loop/: agent_tool_loop.ipynb  agent_tool_loop.py
ez_bshrk/multi_agent_engineering/: README.md  TODO.md  pyproject.toml  spec.md
ez_bshrk/multi_agent_engineering/docs/: crew_ai_minimal_multi_agent_engineering_plan_v_1.md  flowchart TD.mmd  future_directions_multi_agent_engineering_system.md  plan.md  plan.old.md  proposed_changes_summary.txt  reliability_checklist.txt  sequenceDiagram.mmd
ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/: crew.py  main.py
ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/config/: agents.yaml  tasks.yaml
ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/models/: build_plan.py  design_pack.py  file_manifest.py  spec_pack.py
ez_bshrk/multi_agent_engineering/src/multi_agent_engineering/orchestration/: __init__.py  artifact_store.py  manifest_applier.py  pipeline.py  skeleton.py
ez_bshrk/output/: illusion_of_intelligence.md  model-comparison-lab-takeaways.md  the_illusion_of_intelligence_in_agent_demos_gpt_4_1_report.md  the_illusion_of_intelligence_in_agent_demos_gpt_4o_report.md  (+1 more)
(+46 files in other folders)
