[project]
name = "multi_agent_engineering"
version = "0.1.0"
description = "multi_agent_engineering using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
multi_agent_engineering = "multi_agent_engineering.main:run"
run_crew = "multi_agent_engineering.main:run"
train = "multi_agent_engineering.main:train"
replay = "multi_agent_engineering.main:replay"
test = "multi_agent_engineering.main:test"
run_with_trigger = "multi_agent_engineering.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
